src/objects/APTS_SAP_Connection_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SAP Connection settings</description>
    <fields>
        <fullName>APTS_Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Endpoint__c</fullName>
        <description>Endpoint url</description>
        <inlineHelpText>Endpoint url</inlineHelpText>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_FakeEndpoint__c</fullName>
        <label>Fake Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Password__c</fullName>
        <label>APTS_Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_UseFakeEndpoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Fake Endpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_User_Name__c</fullName>
        <label>User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SAP Connection Settings</label>
</CustomObject>